add professional services

--- a/index.html
+++ b/index.html
@@ -163,19 +163,17 @@
           <li>Zhiyuan Liu, <b>Peng Li</b>, Yabin Zheng, Maosong Sun. 2008. <span id="title">Community Detection by Affinity Propagation</span>. <i>Technical Report</i>. [<a href="techreports/TR001_thunlp_community_detection.pdf">pdf</a>]</li>
       </ol>
     </div>
-    <!--div id="software">
-      <h2>Software</h2>
-      <ol>
-        <li><a href="https://github.com/pengli09/str2vec">str2vec</a> is a toolkit for computing vector-space representations for variable-length phrases using recursive autoencoders (RAE). In this document, we demostrate</li>
-        <ul>
-          <li> How to train RAEs in an unsupervised and parallelized manner </li>
-          <li> And how to compute vector-space representations for phrases once the RAE is trained </li>
-        </ul>
 
+    <div id="pro-services">
+      <h2>Professional Services</h2>
+      <ul>
+        <li>Senior Area Chair: AACL (2022)</li>
+        <li>Area Chair: COLING (2022)</li>
+        <li>PC Chair: YWCL (2010)</li>
+        <li>Reviewer: NeurIPS (2022), ICML (2022), ACL (2014, 2021, 2022), EMNLP (2014, 2021, 2022), NAACL (2018), AAAI (2022), IJCAI (2022), COLING (2020), ACM TIST(2015), TACL (Standing Reviewer)</li>
+      </ul>
+    </div>
 
-        <li><a href="https://github.com/pengli09/hiero-decoder-py">hiero-decoder-py</a> is a hierarchical phrase-based translation decoder which supports parallel decoding. New feature functions can also be implemented easily.</li>
-      </ol>
-    </div--!>
 
     <div id="education">
       <h2>Education</h2>
