--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ol>
         <h3><strong>2022</strong></h3>
-           <li>Deli Chen, Yankai Lin, Lei Li, Xuancheng Ren, <b>Peng Li</b>, Jie Zhou, Xu Sun. 2022. <span id="title">Rethinking the Promotion Brought by Contrastive Learning to Semi-Supervised Node Classification</span>. In <i>Proceedings of IJCAI-22</i>, 2852-2858. [<a href="https://www.ijcai.org/proceedings/2022/0395.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2012.07437">arXiv</a>]</li>
+           <li>Jiaxin Mi, Po Hu, <b>Peng Li</b>. 2022. <span id="title">Event Detection with Dual Relational Graph Attention Networks</span>. To appear in <i>Proceedings of COLING 2022</i>.</li>
+          <li>Deli Chen, Yankai Lin, Lei Li, Xuancheng Ren, <b>Peng Li</b>, Jie Zhou, Xu Sun. 2022. <span id="title">Rethinking the Promotion Brought by Contrastive Learning to Semi-Supervised Node Classification</span>. In <i>Proceedings of IJCAI-22</i>, 2852-2858. [<a href="https://www.ijcai.org/proceedings/2022/0395.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2012.07437">arXiv</a>]</li>
           <li>Yujia Qin, Yankai Lin, Jing Yi, Jiajie Zhang, Xu Han, Zhengyan Zhang, Yusheng Su, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. 2022. <span id="title">Knowledge Inheritance for Pre-trained Language Models</span>. In <i>Proceedings of NAACL 2022</i>, 3921-3937. [<a href="https://aclanthology.org/2022.naacl-main.288.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2105.13880">arXiv</a>] [<a href="https://github.com/thunlp/Knowledge-Inheritance">code</a>]</li>
           <li>Yusheng Su, Xiaozhi Wang, Yujia Qin, Chi-Min Chan, Yankai Lin, Huadong Wang, Kaiyue Wen, Zhiyuan Liu, <b>Peng Li</b>, Juanzi Li, Lei Hou, Maosong Sun, Jie Zhou. 2022. <span id="title">On Transferability of Prompt Tuning for Natural Language Processing</span>. In <i>Proceedings of NAACL 2022</i>, 3949-3969. [<a href="https://aclanthology.org/2022.naacl-main.290.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2111.06719">arXiv</a>] [<a href="https://github.com/thunlp/Prompt-Transferability">code</a>]</li>
           <li>Weize Chen, Xu Han, Yankai Lin, Hexu Zhao, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. 2022. <span id="title">Fully Hyperbolic Neural Networks</span>. In <i>Proceedings of ACL 2022</i>, 5672-5686. [<a href="https://aclanthology.org/2022.acl-long.389.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2105.14686">arXiv</a>] [<a href="https://github.com/chenweize1998/fully-hyperbolic-nn">code</a>]</li>
@@ -184,7 +185,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Aug 10, 2022.
+      Last-updated: Aug 17, 2022.
     </div>
   </body>
 </html>
