--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <div id="bio">
       <h2>Bio</h2>
-      Peng Li is a Research Associate Professor at Institute for AI Industry Research (AIR), Tsinghua University. He received his B.S. degree in computer science and technology from Tsinghua University in 2009 and his Ph.D. in computer science and technology from Tsinghua University in 2015. Before joining Tsinghua, he was a principal researcher and team leader at WeChat AI, Tencent. He also previously worked at Institute of Deep Learning, Baidu Inc. His main research interests include natural language processing, pre-trained models, question answering, information extraction, machine translation, and dialogue system. He was the recipient of First Prize of Qian Weichang Chinese Information Processing Science and Technology Award and Second Prize of Chinese Institute of Electronics Science and Technology Progress Award.
+      Peng Li is a Research Associate Professor at Institute for AI Industry Research (AIR), Tsinghua University. He received his B.S. degree in computer science and technology from Tsinghua University in 2009 and his Ph.D. in computer science and technology from Tsinghua University in 2015. Before joining Tsinghua, he was a principal researcher and team leader at WeChat AI, Tencent. He also previously worked at Institute of Deep Learning, Baidu Inc. His research interests include artificial intelligence and natural language processing. He was the recipient of First Prize of Qian Weichang Chinese Information Processing Science and Technology Award and Second Prize of Chinese Institute of Electronics Science and Technology Progress Award.
     </div>
 
     <div id="publications">
@@ -93,7 +93,15 @@
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ol>
         <h3><strong>2022</strong></h3>
-           <li>Jiaxin Mi, Po Hu, <b>Peng Li</b>. 2022. <span id="title">Event Detection with Dual Relational Graph Attention Networks</span>. To appear in <i>Proceedings of COLING 2022</i>.</li>
+           <li>Chi Chen, <b>Peng Li</b>, Maosong Sun and Yang Liu. 2022. <span id="title">End-to-End Unsupervised Vision-and-Language Pre-training</span>. To appear in <i>Proceedings of EMNLP 2022</i>.</li>
+          <li>Shuo Wang, <b>Peng Li</b>, Zhixing Tan, Zhaopeng Tu, Maosong Sun and Yang Liu. 2022. <span id="title">A Template-based Method for Constrained Neural Machine Translation</span>. To appear in <i>Proceedings of EMNLP 2022</i>. [<a href="https://arxiv.org/abs/2205.11255">arXiv</a>]</li>
+          <li>Kaiyu Huang, <b>Peng Li</b>, Jin Ma and Yang Liu. 2022. <span id="title">Entropy-Based Vocabulary Substitution for Incremental Learning in Multilingual Neural Machine Translation</span>. To appear in <i>Proceedings of EMNLP 2022</i>.</li>
+          <li>Lan Jiang, Hao Zhou, Yankai Lin, <b>Peng Li</b>, Jie Zhou and Rui Jiang. 2022. <span id="title">ROSE: Robust Selective Fine-tuning for Pre-trained Language Models</span>. To appear in <i>Proceedings of EMNLP 2022</i>.</li>
+          <li>Xiaozhi Wang, Yulin Chen, Ning Ding, Hao Peng, Zimu Wang, Yankai Lin, Xu Han, Lei Hou, Juanzi Li, Zhiyuan Liu, <b>Peng Li</b> and Jie Zhou. 2022. <span id="title">MAVEN-RE: A Unified Large-scale Dataset for Event Coreference,
+Temporal, Causal, and Subevent Relation Extraction</span>. To appear in <i>Proceedings of EMNLP 2022</i>.</li>
+          <li>Lei Li, Yankai Lin, Xuancheng Ren, Guangxiang Zhao, <b>Peng Li</b>, Jie Zhou and Xu Sun. 2022. <span id="title">From Mimicking to Integrating: Knowledge Integration for Pre-Trained Language Models</span>. In <i>Findings of EMNLP 2022</i>. [<a href="https://arxiv.org/abs/2112.07327">arXiv</a>] [<a href="https://github.com/lancopku/MUKI">code</a>]</li>
+          <li>Yujia Qin, Xiaozhi Wang, Yusheng Su, Yankai Lin, Ning Ding, Jing Yi, Weize Chen, Zhiyuan Liu, Juanzi Li, Lei Hou, <b>Peng Li</b>, Maosong Sun and Jie Zhou. 2022. <span id="title">Exploring Universal Intrinsic Task Subspace via Prompt Tuning</span>. In <i>Findings of EMNLP 2022</i>. [<a href="https://arxiv.org/abs/2110.07867">arXiv</a>]</li>
+          <li>Jiaxin Mi, Po Hu, <b>Peng Li</b>. 2022. <span id="title">Event Detection with Dual Relational Graph Attention Networks</span>. To appear in <i>Proceedings of COLING 2022</i>. [<a href="https://github.com/Macvh/DualGAT">code</a>]</li>
           <li>Deli Chen, Yankai Lin, Lei Li, Xuancheng Ren, <b>Peng Li</b>, Jie Zhou, Xu Sun. 2022. <span id="title">Rethinking the Promotion Brought by Contrastive Learning to Semi-Supervised Node Classification</span>. In <i>Proceedings of IJCAI-22</i>, 2852-2858. [<a href="https://www.ijcai.org/proceedings/2022/0395.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2012.07437">arXiv</a>]</li>
           <li>Yujia Qin, Yankai Lin, Jing Yi, Jiajie Zhang, Xu Han, Zhengyan Zhang, Yusheng Su, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. 2022. <span id="title">Knowledge Inheritance for Pre-trained Language Models</span>. In <i>Proceedings of NAACL 2022</i>, 3921-3937. [<a href="https://aclanthology.org/2022.naacl-main.288.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2105.13880">arXiv</a>] [<a href="https://github.com/thunlp/Knowledge-Inheritance">code</a>]</li>
           <li>Yusheng Su, Xiaozhi Wang, Yujia Qin, Chi-Min Chan, Yankai Lin, Huadong Wang, Kaiyue Wen, Zhiyuan Liu, <b>Peng Li</b>, Juanzi Li, Lei Hou, Maosong Sun, Jie Zhou. 2022. <span id="title">On Transferability of Prompt Tuning for Natural Language Processing</span>. In <i>Proceedings of NAACL 2022</i>, 3949-3969. [<a href="https://aclanthology.org/2022.naacl-main.290.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2111.06719">arXiv</a>] [<a href="https://github.com/thunlp/Prompt-Transferability">code</a>]</li>
@@ -185,7 +193,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Aug 17, 2022.
+      Last-updated: Oct 08, 2022.
     </div>
   </body>
 </html>
