--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 Temporal, Causal, and Subevent Relation Extraction</span>. To appear in <i>Proceedings of EMNLP 2022</i>.</li>
           <li>Lei Li, Yankai Lin, Xuancheng Ren, Guangxiang Zhao, <b>Peng Li</b>, Jie Zhou and Xu Sun. 2022. <span id="title">From Mimicking to Integrating: Knowledge Integration for Pre-Trained Language Models</span>. In <i>Findings of EMNLP 2022</i>. [<a href="https://arxiv.org/abs/2112.07327">arXiv</a>] [<a href="https://github.com/lancopku/MUKI">code</a>]</li>
           <li>Yujia Qin, Xiaozhi Wang, Yusheng Su, Yankai Lin, Ning Ding, Jing Yi, Weize Chen, Zhiyuan Liu, Juanzi Li, Lei Hou, <b>Peng Li</b>, Maosong Sun and Jie Zhou. 2022. <span id="title">Exploring Universal Intrinsic Task Subspace via Prompt Tuning</span>. In <i>Findings of EMNLP 2022</i>. [<a href="https://arxiv.org/abs/2110.07867">arXiv</a>]</li>
-          <li>Jiaxin Mi, Po Hu, <b>Peng Li</b>. 2022. <span id="title">Event Detection with Dual Relational Graph Attention Networks</span>. To appear in <i>Proceedings of COLING 2022</i>. [<a href="https://github.com/Macvh/DualGAT">code</a>]</li>
+          <li>Jiaxin Mi, Po Hu, <b>Peng Li</b>. 2022. <span id="title">Event Detection with Dual Relational Graph Attention Networks</span>. In <i>Proceedings of COLING 2022</i>, 1979-1989. [<a href="https://aclanthology.org/2022.coling-1.172.pdf">pdf</a>] [<a href="https://github.com/Macvh/DualGAT">code</a>]</li>
           <li>Deli Chen, Yankai Lin, Lei Li, Xuancheng Ren, <b>Peng Li</b>, Jie Zhou, Xu Sun. 2022. <span id="title">Rethinking the Promotion Brought by Contrastive Learning to Semi-Supervised Node Classification</span>. In <i>Proceedings of IJCAI-22</i>, 2852-2858. [<a href="https://www.ijcai.org/proceedings/2022/0395.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2012.07437">arXiv</a>]</li>
           <li>Yujia Qin, Yankai Lin, Jing Yi, Jiajie Zhang, Xu Han, Zhengyan Zhang, Yusheng Su, Zhiyuan Liu, <b>Peng Li</b>, Maosong Sun, Jie Zhou. 2022. <span id="title">Knowledge Inheritance for Pre-trained Language Models</span>. In <i>Proceedings of NAACL 2022</i>, 3921-3937. [<a href="https://aclanthology.org/2022.naacl-main.288.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2105.13880">arXiv</a>] [<a href="https://github.com/thunlp/Knowledge-Inheritance">code</a>]</li>
           <li>Yusheng Su, Xiaozhi Wang, Yujia Qin, Chi-Min Chan, Yankai Lin, Huadong Wang, Kaiyue Wen, Zhiyuan Liu, <b>Peng Li</b>, Juanzi Li, Lei Hou, Maosong Sun, Jie Zhou. 2022. <span id="title">On Transferability of Prompt Tuning for Natural Language Processing</span>. In <i>Proceedings of NAACL 2022</i>, 3949-3969. [<a href="https://aclanthology.org/2022.naacl-main.290.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2111.06719">arXiv</a>] [<a href="https://github.com/thunlp/Prompt-Transferability">code</a>]</li>
@@ -193,7 +193,7 @@ Temporal, Causal, and Subevent Relation Extraction</span>. To appear in <i>Proce
     </div>
 
     <div id="last-updated">
-      Last-updated: Oct 08, 2022.
+      Last-updated: Oct 12, 2022.
     </div>
   </body>
 </html>
