--- a/index.html
+++ b/index.html
@@ -96,9 +96,8 @@
            <li>Chi Chen, Peng Li, Maosong Sun and Yang Liu. 2022. <span id="title">End-to-End Unsupervised Vision-and-Language Pre-training</span>. To appear in <i>Proceedings of EMNLP 2022</i>. [<a href="https://github.com/THUNLP-MT/E2E-UVLP">code</a>]</li>
           <li>Shuo Wang, Peng Li, Zhixing Tan, Zhaopeng Tu, Maosong Sun and Yang Liu. 2022. <span id="title">A Template-based Method for Constrained Neural Machine Translation</span>. To appear in <i>Proceedings of EMNLP 2022</i>. [<a href="https://arxiv.org/abs/2205.11255">arXiv</a>] [<a href="https://github.com/THUNLP-MT/Template-NMT">code</a>]</li>
           <li>Kaiyu Huang, Peng Li, Jin Ma and Yang Liu. 2022. <span id="title">Entropy-Based Vocabulary Substitution for Incremental Learning in Multilingual Neural Machine Translation</span>. To appear in <i>Proceedings of EMNLP 2022</i>. [<a href="https://github.com/koukaiu/evs">code</a>]</li>
-          <li>Lan Jiang, Hao Zhou, Yankai Lin, Peng Li, Jie Zhou and Rui Jiang. 2022. <span id="title">ROSE: Robust Selective Fine-tuning for Pre-trained Language Models</span>. To appear in <i>Proceedings of EMNLP 2022</i>.</li>
-          <li>Xiaozhi Wang, Yulin Chen, Ning Ding, Hao Peng, Zimu Wang, Yankai Lin, Xu Han, Lei Hou, Juanzi Li, Zhiyuan Liu, Peng Li and Jie Zhou. 2022. <span id="title">MAVEN-RE: A Unified Large-scale Dataset for Event Coreference,
-Temporal, Causal, and Subevent Relation Extraction</span>. To appear in <i>Proceedings of EMNLP 2022</i>. [<a href="https://github.com/THU-KEG/MAVEN-ERE">code</a>]</li>
+          <li>Lan Jiang, Hao Zhou, Yankai Lin, Peng Li, Jie Zhou and Rui Jiang. 2022. <span id="title">ROSE: Robust Selective Fine-tuning for Pre-trained Language Models</span>. To appear in <i>Proceedings of EMNLP 2022</i>. [<a href="https://arxiv.org/abs/2210.09658">arXiv</a>] [<a href="https://github.com/jiangllan/ROSE">code</a>]</li>
+          <li>Xiaozhi Wang, Yulin Chen, Ning Ding, Hao Peng, Zimu Wang, Yankai Lin, Xu Han, Lei Hou, Juanzi Li, Zhiyuan Liu, Peng Li and Jie Zhou. 2022. <span id="title">MAVEN-RE: A Unified Large-scale Dataset for Event Coreference, Temporal, Causal, and Subevent Relation Extraction</span>. To appear in <i>Proceedings of EMNLP 2022</i>. [<a href="https://github.com/THU-KEG/MAVEN-ERE">code</a>]</li>
           <li>Lei Li, Yankai Lin, Xuancheng Ren, Guangxiang Zhao, Peng Li, Jie Zhou and Xu Sun. 2022. <span id="title">From Mimicking to Integrating: Knowledge Integration for Pre-Trained Language Models</span>. To appear in <i>Findings of EMNLP 2022</i>. [<a href="https://arxiv.org/abs/2112.07327">arXiv</a>] [<a href="https://github.com/lancopku/MUKI">code</a>]</li>
           <li>Jiaxin Mi, Po Hu, Peng Li. 2022. <span id="title">Event Detection with Dual Relational Graph Attention Networks</span>. In <i>Proceedings of COLING 2022</i>, 1979-1989. [<a href="https://aclanthology.org/2022.coling-1.172.pdf">pdf</a>] [<a href="https://github.com/Macvh/DualGAT">code</a>]</li>
           <li>Deli Chen, Yankai Lin, Lei Li, Xuancheng Ren, Peng Li, Jie Zhou, Xu Sun. 2022. <span id="title">Rethinking the Promotion Brought by Contrastive Learning to Semi-Supervised Node Classification</span>. In <i>Proceedings of IJCAI-22</i>, 2852-2858. [<a href="https://www.ijcai.org/proceedings/2022/0395.pdf">pdf</a>] [<a href="https://arXiv.org/abs/2012.07437">arXiv</a>]</li>
@@ -113,6 +112,8 @@ Temporal, Causal, and Subevent Relation Extraction</span>. To appear in <i>Proce
           <li>Xin Lv, Yankai Lin, Yixin Cao, Lei Hou, Juanzi Li, Zhiyuan Liu, Peng Li, Jie Zhou. 2022. <span id="title">Do Pre-trained Models Benefit Knowledge Graph Completion? A Reliable Evaluation and a Reasonable Approach</span>. In <i>Findings of ACL 2022</i>, 3570-3581. [<a href="https://aclanthology.org/2022.findings-acl.282.pdf">pdf</a>] [<a href="https://github.com/THU-KEG/PKGC">code</a>]</li>
           <li>Zhengyan Zhang, Yankai Lin, Zhiyuan Liu, Peng Li, Maosong Sun, Jie Zhou. 2022. <span id="title">MoEﬁcation: Transformer Feed-forward Layers are Mixtures of Experts</span>. In <i>Findings of ACL 2022</i>, 877-890. [<a href="https://aclanthology.org/2022.findings-acl.71.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2110.01786">arXiv</a>] [<a href="https://github.com/thunlp/MoEfication">code</a>]</li>
           <li>Yujia Qin, Xiaozhi Wang, Yusheng Su, Yankai Lin, Ning Ding, Jing Yi, Weize Chen, Zhiyuan Liu, Juanzi Li, Lei Hou, Peng Li, Maosong Sun and Jie Zhou. 2022. <span id="title">Exploring Universal Intrinsic Task Subspace via Prompt Tuning</span>. [<a href="https://arxiv.org/abs/2110.07867">arXiv</a>]</li>
+          <li>Yuanchi Zhang, Peng Li, Maosong Sun and Yang Liu. 2022. <span id="title">Continually Learning from Existing Models: Knowledge Accumulation for Neural Machine Translation</span>. [<a href="https://arxiv.org/abs/2212.09097">arXiv</a>]</li>
+          <li>Xuancheng Huang, Zijun Liu, Peng Li, Maosong Sun and Yang Liu. 2022. <span id="title">Prompt Gating: A Parameter Efficient Tuning Method for Zero-Shot Multi-Source Translation</span>. [<a href="https://arxiv.org/abs/2212.09387">arXiv</a>]</li>
         <h3><strong>2021</strong></h3>
            <li>Deli Chen, Yankai Lin, Guangxiang Zhao, Xuancheng Ren, Peng Li, Jie Zhou, Xu Sun. 2021. <span id="title">Topology-Imbalance Learning for Semi-Supervised Node Classification</span>. In <i>Proceedings of NeurIPS 2021</i>. [<a href="https://papers.nips.cc/paper/2021/file/fa7cdfad1a5aaf8370ebeda47a1ff1c3-Paper.pdf">pdf</a>] [<a href="https://github.com/victorchen96/ReNode">code</a>]</li>
           <li>Lei Li, Yankai Lin, Shuhuai Ren, Peng Li, Jie Zhou, and Xu Sun. 2021. <span id="title">Dynamic Knowledge Distillation for Pre-trained Language Models</span>. In <i>Proceedings of EMNLP 2021</i>, 379-389. [<a href="https://aclanthology.org/2021.emnlp-main.31.pdf">pdf</a>] [<a href="https://github.com/lancopku/DynamicKD">code</a>]</li>
@@ -179,7 +180,7 @@ Temporal, Causal, and Subevent Relation Extraction</span>. To appear in <i>Proce
         <li>Senior Area Chair: AACL (2022)</li>
         <li>Area Chair: COLING (2022)</li>
         <li>PC Chair: YWCL (2010)</li>
-        <li>Reviewer: NeurIPS (2022), ICML (2022), ACL (2014, 2021, 2022), EMNLP (2014, 2021, 2022), NAACL (2018), AAAI (2022), IJCAI (2022), COLING (2020), ACM TIST(2015), TACL (Standing Reviewer)</li>
+        <li>Reviewer: NeurIPS (2022), ICML (2022), ACL (2014, 2021-2023), EMNLP (2014, 2021, 2022), NAACL (2018), CVPR (2023), AAAI (2022), IJCAI (2022, 2023), COLING (2020), ACM TIST(2015), TACL (Standing Reviewer)</li>
       </ul>
     </div>
 
@@ -193,7 +194,7 @@ Temporal, Causal, and Subevent Relation Extraction</span>. To appear in <i>Proce
     </div>
 
     <div id="last-updated">
-      Last-updated: Oct 29, 2022.
+      Last-updated: Dec 22, 2022.
     </div>
   </body>
 </html>
