--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           <li>Yujia Qin, Xiaozhi Wang, Yusheng Su, Yankai Lin, Ning Ding, Jing Yi, Weize Chen, Zhiyuan Liu, Juanzi Li, Lei Hou, Peng Li, Maosong Sun and Jie Zhou. 2022. <span id="title">Exploring Universal Intrinsic Task Subspace via Prompt Tuning</span>. [<a href="https://arxiv.org/abs/2110.07867">arXiv</a>]</li>
           <li>Yuanchi Zhang, Peng Li, Maosong Sun and Yang Liu. 2022. <span id="title">Continually Learning from Existing Models: Knowledge Accumulation for Neural Machine Translation</span>. [<a href="https://arxiv.org/abs/2212.09097">arXiv</a>]</li>
           <li>Xuancheng Huang, Zijun Liu, Peng Li, Maosong Sun and Yang Liu. 2022. <span id="title">Prompt Gating: A Parameter Efficient Tuning Method for Zero-Shot Multi-Source Translation</span>. [<a href="https://arxiv.org/abs/2212.09387">arXiv</a>]</li>
+          <li>Ryuichi Takanobu, Hao Zhou, Yankai Lin, Peng Li, Jie Zhou and Minlie Huang. 2022. <span id="title">Manual-Guided Dialogue for Flexible Conversational Agents</span>. [<a href="https://arxiv.org/abs/2208.07597">arXiv</a>]</li>
         <h3><strong>2021</strong></h3>
            <li>Deli Chen, Yankai Lin, Guangxiang Zhao, Xuancheng Ren, Peng Li, Jie Zhou, Xu Sun. 2021. <span id="title">Topology-Imbalance Learning for Semi-Supervised Node Classification</span>. In <i>Proceedings of NeurIPS 2021</i>. [<a href="https://papers.nips.cc/paper/2021/file/fa7cdfad1a5aaf8370ebeda47a1ff1c3-Paper.pdf">pdf</a>] [<a href="https://github.com/victorchen96/ReNode">code</a>]</li>
           <li>Lei Li, Yankai Lin, Shuhuai Ren, Peng Li, Jie Zhou, and Xu Sun. 2021. <span id="title">Dynamic Knowledge Distillation for Pre-trained Language Models</span>. In <i>Proceedings of EMNLP 2021</i>, 379-389. [<a href="https://aclanthology.org/2021.emnlp-main.31.pdf">pdf</a>] [<a href="https://github.com/lancopku/DynamicKD">code</a>]</li>
@@ -196,7 +197,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Apr 06, 2023.
+      Last-updated: Apr 24, 2023.
     </div>
   </body>
 </html>
