--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ol>
         <h3><strong>2023</strong></h3>
-           <li>Zonghan Yang, Xiaoyuan Yi, Peng Li, Yang Liu, and Xing Xie. 2023. <span id="title">Unified Detoxifying and Debiasing in Language Generation via Inference-time Adaptive Optimization</span>. To appear in <i>Proceedings of ICLR 2023</i>. [<a href="https://arxiv.org/abs/2210.04492">arXiv</a>]</li>
+           <li>Zonghan Yang, Peng Li, Tianyu Pang and Yang Liu. 2023. <span id="title">Improving Adversarial Robustness of Deep Equilibrium Models with Explicit Regulations Along the Neural Dynamics</span>. To appear in <i>Proceedings of ICML 2023</i>.</li>
+          <li>Zonghan Yang, Xiaoyuan Yi, Peng Li, Yang Liu and Xing Xie. 2023. <span id="title">Unified Detoxifying and Debiasing in Language Generation via Inference-time Adaptive Optimization</span>. To appear in <i>Proceedings of ICLR 2023</i>. [<a href="https://openreview.net/pdf?id=FvevdI0aA_h">pdf</a>] [<a href="https://arxiv.org/abs/2210.04492">arXiv</a>]</li>
         <h3><strong>2022</strong></h3>
            <li>Chi Chen, Peng Li, Maosong Sun and Yang Liu. 2022. <span id="title">End-to-End Unsupervised Vision-and-Language Pre-training</span>. In <i>Proceedings of EMNLP 2022</i>, 10799-10810. [<a href="https://aclanthology.org/2022.emnlp-main.742.pdf">pdf</a>] [<a href="https://github.com/THUNLP-MT/E2E-UVLP">code</a>]</li>
           <li>Shuo Wang, Peng Li, Zhixing Tan, Zhaopeng Tu, Maosong Sun and Yang Liu. 2022. <span id="title">A Template-based Method for Constrained Neural Machine Translation</span>. In <i>Proceedings of EMNLP 2022</i>, 3665-3679. [<a href="https://aclanthology.org/2022.emnlp-main.240.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2205.11255">arXiv</a>] [<a href="https://github.com/THUNLP-MT/Template-NMT">code</a>]</li>
@@ -197,7 +198,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Apr 24, 2023.
+      Last-updated: Apr 25, 2023.
     </div>
   </body>
 </html>
