--- a/index.html
+++ b/index.html
@@ -93,7 +93,15 @@
       <div id="google-scholar"><a href="http://scholar.google.com/citations?user=hgYzkOQAAAAJ&hl=en">Google Scholar Citations</a></div>
       <ol>
         <h3><strong>2023</strong></h3>
-           <li>Zonghan Yang, Peng Li, Tianyu Pang and Yang Liu. 2023. <span id="title">Improving Adversarial Robustness of Deep Equilibrium Models with Explicit Regulations Along the Neural Dynamics</span>. To appear in <i>Proceedings of ICML 2023</i>.</li>
+           <li>Qinhong Zhou, Zonghan Yang, Peng Li and Yang Liu. 2023. <span id="title">Bridging the Gap between Decision and Logits in Decision-based Knowledge Distillation for Pre-trained Language Models</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
+          <li>Chi Chen, Peng Li, Maosong Sun and Yang Liu. 2023. <span id="title">Weakly Supervised Vision-and-Language Pre-training with Relative Representations</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
+          <li>Xuancheng Huang, Zijun Liu, Peng Li, Tao Li, Maosong Sun and Yang Liu. 2023. <span id="title">An Extensible Plug-and-Play Method for Multi-Aspect Controllable Text Generation</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
+          <li>Yuanchi Zhang, Peng Li, Maosong Sun and Yang Liu. 2023. <span id="title">Continual Knowledge Distillation for Neural Machine Translation</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
+          <li>Kaiyu Huang, Peng Li, Jin Ma, Ting Yao and Yang Liu. 2023. <span id="title">Knowledge Transfer in Incremental Learning for Multilingual Neural Machine Translation</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
+          <li>Yuanjian Xu, Qi An, Jiahuan Zhang, Peng Li and Zaiqing Nie. 2023. <span id="title">Hard Sample Aware Prompt-Tuning</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
+          <li>Zhengyan Zhang, Zhiyuan Zeng, Yankai Lin, Huadong Wang, Deming Ye, Chaojun Xiao, Xu Han, Zhiyuan Liu, Peng Li, Maosong Sun and Jie Zhou. 2023. <span id="title">Plug-and-Play Knowledge Injection for Pre-trained Language Models</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
+          <li>Zhicheng Guo, Sijie Cheng, Yile Wang, Peng Li and Yang Liu. 2023. <span id="title">Prompt-Guided Retrieval Augmentation for Non-Knowledge-Intensive Tasks</span>. To appear in <i>ACL 2023</i>.</li>
+          <li>Zonghan Yang, Peng Li, Tianyu Pang and Yang Liu. 2023. <span id="title">Improving Adversarial Robustness of Deep Equilibrium Models with Explicit Regulations Along the Neural Dynamics</span>. To appear in <i>Proceedings of ICML 2023</i>.</li>
           <li>Zonghan Yang, Xiaoyuan Yi, Peng Li, Yang Liu and Xing Xie. 2023. <span id="title">Unified Detoxifying and Debiasing in Language Generation via Inference-time Adaptive Optimization</span>. To appear in <i>Proceedings of ICLR 2023</i>. [<a href="https://openreview.net/pdf?id=FvevdI0aA_h">pdf</a>] [<a href="https://arxiv.org/abs/2210.04492">arXiv</a>]</li>
         <h3><strong>2022</strong></h3>
            <li>Chi Chen, Peng Li, Maosong Sun and Yang Liu. 2022. <span id="title">End-to-End Unsupervised Vision-and-Language Pre-training</span>. In <i>Proceedings of EMNLP 2022</i>, 10799-10810. [<a href="https://aclanthology.org/2022.emnlp-main.742.pdf">pdf</a>] [<a href="https://github.com/THUNLP-MT/E2E-UVLP">code</a>]</li>
@@ -198,8 +206,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Apr 25, 2023.
+      Last-updated: May 03, 2023.
     </div>
   </body>
 </html>
-
