--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
           <li>Zhicheng Guo, Sijie Cheng, Yile Wang, Peng Li and Yang Liu. 2023. <span id="title">Prompt-Guided Retrieval Augmentation for Non-Knowledge-Intensive Tasks</span>. To appear in <i>Findings of ACL 2023</i>.</li>
           <li>Zonghan Yang, Peng Li, Tianyu Pang and Yang Liu. 2023. <span id="title">Improving Adversarial Robustness of Deep Equilibrium Models with Explicit Regulations Along the Neural Dynamics</span>. To appear in <i>Proceedings of ICML 2023</i>.</li>
           <li>Zonghan Yang, Xiaoyuan Yi, Peng Li, Yang Liu and Xing Xie. 2023. <span id="title">Unified Detoxifying and Debiasing in Language Generation via Inference-time Adaptive Optimization</span>. In <i>Proceedings of ICLR 2023</i>. [<a href="https://openreview.net/pdf?id=FvevdI0aA_h">pdf</a>] [<a href="https://arxiv.org/abs/2210.04492">arXiv</a>]</li>
+          <li>Fengran Mo, Jian-Yun Nie, Kaiyu Huang, Kelong Mao, Yutao Zhu, Peng Li and Yang Liu. 2023. <span id="title">Learning to Relate to Previous Turns in Conversational Search</span>. To appear in <i>Proceedings of KDD 2023</i>.</li>
+          <li>Jifan Yu, Hanming Li, Gan Luo, Yankai Lin, Peng Li, Jianjun Xu, Lei Hou and Bin Xu. 2023. <span id="title">Exploring the Effectiveness of Student Behavior in Prerequisite Relation Discovery for Concepts</span>. To appear in <i>Proceedings of APWeb-WAIM 2023</i>.</li>
+          <li>Wenkai Yang, Yankai Lin, Guangxiang Zhao, Peng Li, Jie Zhou and Xu Sun. 2023. <span id="title">When to Trust Aggregated Gradients: Addressing Negative Client Sampling in Federated Learning</span>. To appear in <i>Transactions on Machine Learning Research (TMLR)</i>, 2023.</li>
         <h3><strong>2022</strong></h3>
            <li>Chi Chen, Peng Li, Maosong Sun and Yang Liu. 2022. <span id="title">End-to-End Unsupervised Vision-and-Language Pre-training</span>. In <i>Proceedings of EMNLP 2022</i>, 10799-10810. [<a href="https://aclanthology.org/2022.emnlp-main.742.pdf">pdf</a>] [<a href="https://github.com/THUNLP-MT/E2E-UVLP">code</a>]</li>
           <li>Shuo Wang, Peng Li, Zhixing Tan, Zhaopeng Tu, Maosong Sun and Yang Liu. 2022. <span id="title">A Template-based Method for Constrained Neural Machine Translation</span>. In <i>Proceedings of EMNLP 2022</i>, 3665-3679. [<a href="https://aclanthology.org/2022.emnlp-main.240.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2205.11255">arXiv</a>] [<a href="https://github.com/THUNLP-MT/Template-NMT">code</a>]</li>
@@ -206,7 +209,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: May 03, 2023.
+      Last-updated: May 19, 2023.
     </div>
   </body>
 </html>
