--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
           <li>Yuanjian Xu, Qi An, Jiahuan Zhang, Peng Li and Zaiqing Nie. 2023. <span id="title">Hard Sample Aware Prompt-Tuning</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
           <li>Zhengyan Zhang, Zhiyuan Zeng, Yankai Lin, Huadong Wang, Deming Ye, Chaojun Xiao, Xu Han, Zhiyuan Liu, Peng Li, Maosong Sun and Jie Zhou. 2023. <span id="title">Plug-and-Play Knowledge Injection for Pre-trained Language Models</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
           <li>Zhicheng Guo, Sijie Cheng, Yile Wang, Peng Li and Yang Liu. 2023. <span id="title">Prompt-Guided Retrieval Augmentation for Non-Knowledge-Intensive Tasks</span>. To appear in <i>Findings of ACL 2023</i>.</li>
-          <li>Zonghan Yang, Peng Li, Tianyu Pang and Yang Liu. 2023. <span id="title">Improving Adversarial Robustness of Deep Equilibrium Models with Explicit Regulations Along the Neural Dynamics</span>. To appear in <i>Proceedings of ICML 2023</i>.</li>
+          <li>Zonghan Yang, Peng Li, Tianyu Pang and Yang Liu. 2023. <span id="title">Improving Adversarial Robustness of Deep Equilibrium Models with Explicit Regulations Along the Neural Dynamics</span>. To appear in <i>Proceedings of ICML 2023</i>. [<a href="https://arxiv.org/abs/2306.01435">arXiv</a>] [<a href="https://github.com/minicheshire/DEQ-Regulating-Neural-Dynamics">code</a>]</li>
           <li>Zonghan Yang, Xiaoyuan Yi, Peng Li, Yang Liu and Xing Xie. 2023. <span id="title">Unified Detoxifying and Debiasing in Language Generation via Inference-time Adaptive Optimization</span>. In <i>Proceedings of ICLR 2023</i>. [<a href="https://openreview.net/pdf?id=FvevdI0aA_h">pdf</a>] [<a href="https://arxiv.org/abs/2210.04492">arXiv</a>]</li>
-          <li>Fengran Mo, Jian-Yun Nie, Kaiyu Huang, Kelong Mao, Yutao Zhu, Peng Li and Yang Liu. 2023. <span id="title">Learning to Relate to Previous Turns in Conversational Search</span>. To appear in <i>Proceedings of KDD 2023</i>.</li>
+          <li>Fengran Mo, Jian-Yun Nie, Kaiyu Huang, Kelong Mao, Yutao Zhu, Peng Li and Yang Liu. 2023. <span id="title">Learning to Relate to Previous Turns in Conversational Search</span>. To appear in <i>Proceedings of KDD 2023</i>. [<a href="https://arxiv.org/abs/2306.02553">arXiv</a>]</li>
           <li>Jifan Yu, Hanming Li, Gan Luo, Yankai Lin, Peng Li, Jianjun Xu, Lei Hou and Bin Xu. 2023. <span id="title">Exploring the Effectiveness of Student Behavior in Prerequisite Relation Discovery for Concepts</span>. To appear in <i>Proceedings of APWeb-WAIM 2023</i>.</li>
           <li>Wenkai Yang, Yankai Lin, Guangxiang Zhao, Peng Li, Jie Zhou and Xu Sun. 2023. <span id="title">When to Trust Aggregated Gradients: Addressing Negative Client Sampling in Federated Learning</span>. To appear in <i>Transactions on Machine Learning Research (TMLR)</i>, 2023.</li>
         <h3><strong>2022</strong></h3>
@@ -209,7 +209,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: May 19, 2023.
+      Last-updated: Jun 08, 2023.
     </div>
   </body>
 </html>
