--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <h3><strong>2023</strong></h3>
            <li>Qinhong Zhou, Zonghan Yang, Peng Li and Yang Liu. 2023. <span id="title">Bridging the Gap between Decision and Logits in Decision-based Knowledge Distillation for Pre-trained Language Models</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
           <li>Chi Chen, Peng Li, Maosong Sun and Yang Liu. 2023. <span id="title">Weakly Supervised Vision-and-Language Pre-training with Relative Representations</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
-          <li>Xuancheng Huang, Zijun Liu, Peng Li, Tao Li, Maosong Sun and Yang Liu. 2023. <span id="title">An Extensible Plug-and-Play Method for Multi-Aspect Controllable Text Generation</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
-          <li>Yuanchi Zhang, Peng Li, Maosong Sun and Yang Liu. 2023. <span id="title">Continual Knowledge Distillation for Neural Machine Translation</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
+          <li>Xuancheng Huang, Zijun Liu, Peng Li, Tao Li, Maosong Sun and Yang Liu. 2023. <span id="title">An Extensible Plug-and-Play Method for Multi-Aspect Controllable Text Generation</span>. To appear in <i>Proceedings of ACL 2023</i>. [<a href="https://arxiv.org/abs/2212.09387">arXiv</a>] [<a href="https://github.com/THUNLP-MT/PromptGating4MCTG">code</a>]</li>
+          <li>Yuanchi Zhang, Peng Li, Maosong Sun and Yang Liu. 2023. <span id="title">Continual Knowledge Distillation for Neural Machine Translation</span>. To appear in <i>Proceedings of ACL 2023</i>. [<a href="https://arxiv.org/abs/2212.09097">arXiv</a>] [<a href="https://github.com/THUNLP-MT/CKD">code</a>]</li>
           <li>Kaiyu Huang, Peng Li, Jin Ma, Ting Yao and Yang Liu. 2023. <span id="title">Knowledge Transfer in Incremental Learning for Multilingual Neural Machine Translation</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
           <li>Yuanjian Xu, Qi An, Jiahuan Zhang, Peng Li and Zaiqing Nie. 2023. <span id="title">Hard Sample Aware Prompt-Tuning</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
           <li>Zhengyan Zhang, Zhiyuan Zeng, Yankai Lin, Huadong Wang, Deming Ye, Chaojun Xiao, Xu Han, Zhiyuan Liu, Peng Li, Maosong Sun and Jie Zhou. 2023. <span id="title">Plug-and-Play Knowledge Injection for Pre-trained Language Models</span>. To appear in <i>Proceedings of ACL 2023</i>.</li>
@@ -126,8 +126,6 @@
           <li>Xin Lv, Yankai Lin, Yixin Cao, Lei Hou, Juanzi Li, Zhiyuan Liu, Peng Li, Jie Zhou. 2022. <span id="title">Do Pre-trained Models Benefit Knowledge Graph Completion? A Reliable Evaluation and a Reasonable Approach</span>. In <i>Findings of ACL 2022</i>, 3570-3581. [<a href="https://aclanthology.org/2022.findings-acl.282.pdf">pdf</a>] [<a href="https://github.com/THU-KEG/PKGC">code</a>]</li>
           <li>Zhengyan Zhang, Yankai Lin, Zhiyuan Liu, Peng Li, Maosong Sun, Jie Zhou. 2022. <span id="title">MoEﬁcation: Transformer Feed-forward Layers are Mixtures of Experts</span>. In <i>Findings of ACL 2022</i>, 877-890. [<a href="https://aclanthology.org/2022.findings-acl.71.pdf">pdf</a>] [<a href="https://arxiv.org/abs/2110.01786">arXiv</a>] [<a href="https://github.com/thunlp/MoEfication">code</a>]</li>
           <li>Yujia Qin, Xiaozhi Wang, Yusheng Su, Yankai Lin, Ning Ding, Jing Yi, Weize Chen, Zhiyuan Liu, Juanzi Li, Lei Hou, Peng Li, Maosong Sun and Jie Zhou. 2022. <span id="title">Exploring Universal Intrinsic Task Subspace via Prompt Tuning</span>. [<a href="https://arxiv.org/abs/2110.07867">arXiv</a>]</li>
-          <li>Yuanchi Zhang, Peng Li, Maosong Sun and Yang Liu. 2022. <span id="title">Continually Learning from Existing Models: Knowledge Accumulation for Neural Machine Translation</span>. [<a href="https://arxiv.org/abs/2212.09097">arXiv</a>]</li>
-          <li>Xuancheng Huang, Zijun Liu, Peng Li, Maosong Sun and Yang Liu. 2022. <span id="title">Prompt Gating: A Parameter Efficient Tuning Method for Zero-Shot Multi-Source Translation</span>. [<a href="https://arxiv.org/abs/2212.09387">arXiv</a>]</li>
           <li>Ryuichi Takanobu, Hao Zhou, Yankai Lin, Peng Li, Jie Zhou and Minlie Huang. 2022. <span id="title">Manual-Guided Dialogue for Flexible Conversational Agents</span>. [<a href="https://arxiv.org/abs/2208.07597">arXiv</a>]</li>
         <h3><strong>2021</strong></h3>
            <li>Deli Chen, Yankai Lin, Guangxiang Zhao, Xuancheng Ren, Peng Li, Jie Zhou, Xu Sun. 2021. <span id="title">Topology-Imbalance Learning for Semi-Supervised Node Classification</span>. In <i>Proceedings of NeurIPS 2021</i>. [<a href="https://papers.nips.cc/paper/2021/file/fa7cdfad1a5aaf8370ebeda47a1ff1c3-Paper.pdf">pdf</a>] [<a href="https://github.com/victorchen96/ReNode">code</a>]</li>
@@ -209,7 +207,7 @@
     </div>
 
     <div id="last-updated">
-      Last-updated: Jun 08, 2023.
+      Last-updated: Jun 13, 2023.
     </div>
   </body>
 </html>
